# agentic-workflows

./: .gitignore  README.md  install.sh  pyproject.toml
config/: config.example.json
src/ae/: __init__.py  cli.py
