[project]
name = "agentic-workflows"
version = "0.1.0"
description = "Small agentic engineering workflow CLI"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
]

[project.scripts]
ae = "ae.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
